--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden !important;
+}
+
 .business-listing {
     width: 100%;
     padding: 50px 0 100px 0;
